// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MegaMenuItem.vue > matches snapshot 1`] = `
<a
  class="link group w-full no-underline p-4 text-sm transition-all rounded-lg hover:bg-gray-50 hover:dark:bg-gray-850 hover:text-red-500 dark:hover:text-red-300"
  data-id="sds-megamenuitem"
  role="menuitem"
>
  <!--v-if-->
  <div
    class="flex flex-row gap-4"
  >
    <!--v-if-->
    <div
      class="flex flex-col"
    >
      <div
        class="inline-flex group"
      >
        <p
          class="group-hover:text-red-500 dark:group-hover:text-red-300"
        />
        <!--v-if-->
      </div>
      <p
        class="text-gray-600 dark:text-gray-500"
      >
        
        
      </p>
    </div>
  </div>
</a>
`;

exports[`MegaMenuItem.vue > matches snapshot with link kind "descriptive" prop assigned 1`] = `
"<a data-id=\\"sds-megamenuitem\\" class=\\"link group w-full no-underline p-4 transition-all rounded-lg hover:no-underline hover:bg-gray-50 hover:dark:bg-gray-850\\" role=\\"menuitem\\">
  <!--v-if-->
  <div class=\\"flex flex-row gap-4\\">
    <!--v-if-->
    <div class=\\"gap-1 flex flex-col\\">
      <div class=\\"inline-flex group\\">
        <p class=\\"group-hover:text-red-500 dark:group-hover:text-red-300\\"></p>
        <!--v-if-->
      </div>
      <p class=\\"text-gray-600 dark:text-gray-500\\"></p>
    </div>
  </div>
</a>"
`;

exports[`MegaMenuItem.vue > matches snapshot with link kind "landing-page" prop assigned 1`] = `
"<a data-id=\\"sds-megamenuitem\\" class=\\"link group w-full no-underline p-4 text-lg hover:no-underline hover:text-red-500 dark:hover:text-red-300\\" role=\\"menuitem\\">
  <!--v-if-->
  <div class=\\"flex flex-row gap-4\\">
    <!--v-if-->
    <div class=\\"flex flex-col\\">
      <div class=\\"inline-flex group\\">
        <p class=\\"group-hover:text-red-500 dark:group-hover:text-red-300\\"></p><svg class=\\"w-4 h-4 ml-2 my-auto transition-all text-red-500 dark:text-red-300 group-hover:ml-4\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"28\\" height=\\"32\\" viewBox=\\"0 0 448 512\\">
          <path fill=\\"currentColor\\" d=\\"M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224H32c-17.7 0-32 14.3-32 32s14.3 32 32 32h306.7L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z\\"></path>
        </svg>
      </div>
      <p class=\\"text-gray-600 dark:text-gray-500\\"></p>
    </div>
  </div>
</a>"
`;

exports[`MegaMenuItem.vue > matches snapshot with link kind "simple" prop assigned 1`] = `
"<a data-id=\\"sds-megamenuitem\\" class=\\"link group w-full no-underline p-4 text-sm transition-all rounded-lg hover:bg-gray-50 hover:dark:bg-gray-850 hover:text-red-500 dark:hover:text-red-300\\" role=\\"menuitem\\">
  <!--v-if-->
  <div class=\\"flex flex-row gap-4\\">
    <!--v-if-->
    <div class=\\"flex flex-col\\">
      <div class=\\"inline-flex group\\">
        <p class=\\"group-hover:text-red-500 dark:group-hover:text-red-300\\"></p>
        <!--v-if-->
      </div>
      <p class=\\"text-gray-600 dark:text-gray-500\\"></p>
    </div>
  </div>
</a>"
`;

exports[`MegaMenuItem.vue > matches snapshot with no props assigned 1`] = `
"<a data-id=\\"sds-megamenuitem\\" class=\\"link group w-full no-underline p-4 text-sm transition-all rounded-lg hover:bg-gray-50 hover:dark:bg-gray-850 hover:text-red-500 dark:hover:text-red-300\\" role=\\"menuitem\\">
  <!--v-if-->
  <div class=\\"flex flex-row gap-4\\">
    <!--v-if-->
    <div class=\\"flex flex-col\\">
      <div class=\\"inline-flex group\\">
        <p class=\\"group-hover:text-red-500 dark:group-hover:text-red-300\\"></p>
        <!--v-if-->
      </div>
      <p class=\\"text-gray-600 dark:text-gray-500\\"></p>
    </div>
  </div>
</a>"
`;
